Project list index javascript implementation.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -121,7 +121,7 @@ ja:
       updated:            '案件が正常に更新されました'
       deleted:            '案件が正常に削除されました'
       cant_delete_system: 'システム用のプロジェクトは削除できません'
-
+      empty-list:	  'プロジェクトは空です。'
 
   infrastructures:
     infrastructure:     'インフラストラクチャ'
