--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -235,9 +235,10 @@ en:
     individual:        'Infrastructure Individual'
     select_serverspec: 'Select Serverspecs'
     btn:
-      add:    'Add Serverspec'
-      create: 'Create Serverspec'
-      run:    'Run Serverspecs'
+      add:       'Add Serverspec'
+      create:    'Create Serverspec'
+      run:       'Run Serverspecs'
+      generator: 'Generator'
     msg:
       created:   'Serverspec was successfully created.'
       updated:   'Serverspec was successfully updated.'
@@ -249,6 +250,14 @@ en:
       generated: 'Serverspec is successfully generated.'
       auto_generated_enabled_html:  '<small>This Serverspec was created automatically by "<em>serverspec-handler</em>" cookbook.</small>'
       auto_generated_disabled_html: '<small>This option is available only when runlist includes "<em>serverspec-handler</em>" cookbook.</small>'
+    generator:
+      title:        'Serverspec Generaotr'
+      resources:    'Resources'
+      add_resource: 'Add Resource'
+      add_it:       'Add It Block'
+      add_its:      'Add Its Block'
+      generated:    'Generated Serverspec'
+
 
 
   schedules:
