Added SSP on serverspecs indexpage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -251,7 +251,7 @@ en:
       auto_generated_enabled_html:  '<small>This Serverspec was created automatically by "<em>serverspec-handler</em>" cookbook.</small>'
       auto_generated_disabled_html: '<small>This option is available only when runlist includes "<em>serverspec-handler</em>" cookbook.</small>'
     generator:
-      title:        'Serverspec Generaotr'
+      title:        'Serverspec Generator'
       resources:    'Resources'
       add_resource: 'Add Resource'
       add_it:       'Add It Block'
