add glyphicon icons and changed info color

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,7 @@ en:
       lang:            'Language'
       previous:        'Previous'
       next:            'Next'
+      delete:          'Delete'
     msg:
       loading:       ' Loading...'
       empty:         '%{name} is empty'
