--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -41,6 +41,7 @@ ja:
       lang:            '言語'
       previous:        '前へ'
       next:            '次へ'
+      delete:	       '削除します'
     msg:
       loading:       ' 読み込み中...'
       empty:         '%{name}がありません'
