Update listener management function of ELB.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -410,24 +410,44 @@ en:
     settings:          'Settings'
     change_status:     'Change status of EC2 instance'
     changing_status:   'Changing status of EC2 instance...'
-    listeners:          'Listeners'
+    listeners:         'Listeners'
     protocol:          'Protocol'
     lb_port:           'LoadBalancer Port'
     instance_protocol: 'Instance Protocol'
     instance_port:     'Instance Port'
     expiration_date:   'Expiration date of SSL certificate'
+    certificate_name:  'Certificate name'
+    private_key:   'Private key'
+    public_key_certificate: 'Public certificate'
+    certificate_chain:   'Certificate chain'
+    certificate:       'Certificate'
     instances:         'Instances'
     state:             'State'
     reason_code:       'Reason Code'
     msg:
       registered_to_elb:    'EC2 instance was successfully registered to ELB.'
       deregistered_from_elb: 'EC2 instance was successfully deregisterd from ELB.'
+      created_listener_to_elb: 'Created the listener from the ELB.'
+      deleted_listener_to_elb: 'Deleted the listener from the ELB.'
+      uploaded_certificate: 'Uploaded the certificate.'
+      deleted_certificate: 'Deleted the certificate.'
+      private_key_droppable: 'Please either insert a private key or drag-and-drop the file of private key.'
+      public_key_certificate_droppable: 'Please either insert a public　key　certificate or drag-and-drop the file of public　key　certificate.'
+      certificate_chain_droppable: '(Option) Please either insert a certificate chain or drag-and-drop the file of certificate chain.'
     btn:
       register:   'Register to ELB'
       deregister: 'Deregister from ELB'
+      create_to_elb_listener: 'Create to listener'
+      edit_to_elb_listener: 'Edit to listener'
+      delete_to_elb_listener: 'Delete to listener'
+      upload_certificate: 'Upload certificate'
+      edit_certificate: 'Edit certificate'
+      delete_certificate: 'Delete certificate'
     confirm:
       register:   'Do you want to register EC2 instance with ELB?'
       deregister: 'Do you want to release registration of EC2 instance from ELB?'
+      delete_listener: 'Do you want to delete of listener from ELB?'
+      delete_certificate: 'Do you want to delete of certificate?'
 
   ec2_private_keys:
     msg:
