--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -411,24 +411,44 @@ ja:
     settings:          '設定'
     change_status:     'EC2 インスタンスのステータスを変更する'
     changing_status:   'EC2 インスタンスのステータスを変更しています...'
-    listeners:          'リスナー'
+    listeners:         'リスナー'
     protocol:          'プロトコル'
     lb_port:           'ロードバランサ側ポート'
     instance_protocol: 'インスタンス側プロトコル'
     instance_port:     'インスタンス側ポート'
     expiration_date:   'SSL証明書の有効期限'
+    certificate_name:  '証明書名'
+    private_key:   'プライベートキー'
+    public_key_certificate: 'パブリックキー証明書'
+    certificate_chain:   '証明書チェーン'
+    certificate:       '証明書'
     instances:         'インスタンス'
     state:             '状態'
     reason_code:       '原因コード'
     msg:
       registered_to_elb:    'ELB に EC2 インスタンスを登録しました'
       deregistered_from_elb: 'ELB から EC2 インスタンスの登録を解除しました'
+      created_listener_to_elb: 'ELB に リスナーを作成しました。'
+      deleted_listener_to_elb: 'ELB からリスナーを削除しました。'
+      uploaded_certificate: '証明書をアップロードしました。'
+      deleted_certificate: '証明書を削除しました。'
+      private_key_droppable: '使用する秘密鍵を入力するか、秘密鍵ファイルをここにドラッグアンドドロップしてください。'
+      public_key_certificate_droppable: '使用するパブリックキー証明書を入力するか、パブリックキー証明書ファイルをここにドラッグアンドドロップしてください。'
+      certificate_chain_droppable: '（オプション） 使用する証明書チェーンを入力するか、証明書チェーンファイルをここにドラッグアンドドロップしてください。'
     btn:
       register:   'インスタンスを登録'
       deregister: 'インスタンスの登録を解除'
+      create_to_elb_listener: 'リスナーの作成'
+      edit_to_elb_listener: 'リスナーの編集'
+      delete_to_elb_listener: 'リスナーの削除'
+      upload_certificate: '証明書のアップロード'
+      edit_certificate: '証明書の編集'
+      delete_certificate: '証明書の削除'
     confirm:
       register:   'EC2 インスタンスを ELB に登録しますか?'
       deregister: 'ELB から EC2 インスタンスの登録を解除しますか?'
+      delete_listener: 'ELBからリスナーを削除しますか?'
+      delete_certificate: '証明書を削除しますか?'
 
   ec2_private_keys:
     msg:
