Create Display of Serverspec Results data logs to the template.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -236,6 +236,8 @@ en:
     global:            'Global'
     individual:        'Infrastructure Individual'
     select_serverspec: 'Select Serverspecs'
+    created_at:	       'at'
+    operation_logs:    'Operation Logs'
     btn:
       add:    'Add Serverspec'
       create: 'Create Serverspec'
