--- a/config/locales/en.bootstrap.yml
+++ b/config/locales/en.bootstrap.yml
@@ -15,6 +15,7 @@ en:
       detach: "Detach"
       close: "Close"
       change: "Change"
+      create: "Create"
     titles:
       edit: "Edit"
       save: "Save"
