Validation for keypair submission using key name and fingerprint in a selected AWS region

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -171,6 +171,7 @@ en:
       generate_serverspec_confirm: 'Generate serverspec to verify access to RDS Instance?'
       empty-list:                  'No Infrastructure found.'
       loading-list:                'Loading Infrastructures ...'
+      invalid_keypair:		   'Invalid key pair! Please check the keypair file.'
 
 
   nodes:
