--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -41,7 +41,7 @@ ja:
       lang:            '言語'
       previous:        '前へ'
       next:            '次へ'
-      delete:	       '削除します'
+      delete:          '削除します'
     msg:
       loading:       ' 読み込み中...'
       empty:         '%{name}がありません'
@@ -122,7 +122,7 @@ ja:
       updated:            '案件が正常に更新されました'
       deleted:            '案件が正常に削除されました'
       cant_delete_system: 'システム用のプロジェクトは削除できません'
-      empty-list:	  'プロジェクトは空です。'
+      empty-list:         'プロジェクトは空です。'
 
   infrastructures:
     infrastructure:     'インフラストラクチャ'
@@ -223,7 +223,7 @@ ja:
       deleted:                'ディッシュが正常に削除されました'
       description:            'ディッシュは EC2 インスタンスの構成を定義するものです。'
       no_serverspec_selected: 'Serverspec が選択されていません'
-      empty-list:	      'ディッシュのリストが空です'
+      empty-list:             'ディッシュのリストが空です'
 
 
   serverspecs:
@@ -238,8 +238,8 @@ ja:
     select_serverspec: '実行する Serverspec を選択'
     operation_logs:    '操作ログ'
     created_at:        'at'
-    run:	       'Run Serverspecs'
-    results:	       'Serverspecs 結果'
+    run:               'Serverspec の実行'
+    results:           'Serverspec の結果'
     btn:
       add:    'Serverspec の追加'
       create: 'Serverspec の作成'
