Fix listener management function of ELB.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,7 @@ en:
       previous:        'Previous'
       next:            'Next'
       delete:          'Delete'
+      update:          'Update'
     msg:
       loading:       ' Loading...'
       empty:         '%{name} is empty'
