--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -42,6 +42,7 @@ ja:
       previous:        '前へ'
       next:            '次へ'
       delete:	       '削除します'
+      update:          '更新'
     msg:
       loading:       ' 読み込み中...'
       empty:         '%{name}がありません'
