Fix listener management function of ELB.

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -449,6 +449,7 @@ ja:
     instances:         'インスタンス'
     state:             '状態'
     reason_code:       '原因コード'
+    none:              'なし'
     msg:
       start_ec2:             'EC2 インスタンスの起動が開始されました'
       stop_ec2:              'EC2 インスタンスの停止が開始されました'
