--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -514,3 +514,15 @@ ja:
       create_snapshot: '%{volume_id} のスナップショットを作成しますか?'
       delete_snapshot: '以下のスナップショットを削除しますか?'
       creation_started: 'スナップショットの作成が開始されました'
+
+  datepicker:
+    today: '今日に行きます'
+    selectTime: '選択時'
+    selectMonth: '月を選択'
+    togglePeriod: '切り替え期間'
+    incrementMinute: 'インクリメントミニッツ'
+    decrementMinute: 'デクリメントミニッツ'
+    pickMinute: '分を選択してください'
+    incrementHour: '増分時間'
+    decrementHour: 'デクリメント時間'
+    pickHour: '時間を選びます'
