--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -516,13 +516,13 @@ ja:
       creation_started: 'スナップショットの作成が開始されました'
 
   datepicker:
-    today: '今日に行きます'
-    selectTime: '選択時'
+    today: '今日'
+    selectTime: '時刻を選択'
     selectMonth: '月を選択'
-    togglePeriod: '切り替え期間'
-    incrementMinute: 'インクリメントミニッツ'
-    decrementMinute: 'デクリメントミニッツ'
+    togglePeriod: '午前/午後を切り替え'
+    incrementMinute: '1分後'
+    decrementMinute: '1分前'
     pickMinute: '分を選択してください'
-    incrementHour: '増分時間'
-    decrementHour: 'デクリメント時間'
-    pickHour: '時間を選びます'
+    incrementHour: '1時間後'
+    decrementHour: '1時間前'
+    pickHour: '時間を選択してください'
