--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -208,6 +208,7 @@ ja:
       attr_not_exists:    '利用可能なアトリビュートは存在しません'
       runlist_empty:      'Runlist は空です'
       dish_applied:       'Dish が適用されました'
+      stopped:            'インスタンスが停止しました。ブートストラップを有効にするには、インスタンスを起動してください。'
 
 
   dishes:
