--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -148,6 +148,7 @@ en:
     btn:
       delete_stack:         'Delete Stack'
       delete_stack_confirm: 'Execute'
+      operation_schedule:   'Operation Schedule'
       add:                  'New Infrastructure'
       change_scale:         'Change scale'
       generate_serverspec:  'Generate Serverspec'
@@ -174,6 +175,34 @@ en:
       loading-list:                'Loading Infrastructures ...'
       invalid_keypair:		   'Invalid key pair! Please check the keypair file.'
 
+  operation_scheduler:
+    title: 'Operation Scheduler'
+    modal_title: 'Manage Schedule'
+    recurring: 'Recurring'
+    duration: 'Duration'
+    every: 'Every:'
+    start_date: 'Start Date:'
+    end_date: 'End Date:'
+    start_time: 'Start Time:'
+    end_time: 'End Time:'
+    btn:
+      view_sched: 'View Schedule'
+      manage_sched: 'Manage Schedule'
+      cancel: 'Cancel'
+      save: 'Save'
+    desc:
+      everyday: 'Everyday'
+      weekdays: 'Weekdays (Monday - Friday)'
+      weekends: 'Weekends (Saturday & Sunday)'
+      specific_dates: 'Specific dates (other)'
+    dates:
+      monday: 'Monday'
+      tuesday: 'Tuesday'
+      wednesday: 'Wednesday'
+      thursday: 'Thursday'
+      friday: 'Friday'
+      saturday: 'Saturday'
+      sunday: 'Sunday'
 
   nodes:
     bootstrap:   'Bootstrap'
