modified modal for UX

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -181,10 +181,10 @@ en:
     recurring: 'Recurring'
     duration: 'Duration'
     every: 'Every:'
-    start_date: 'Start Date:'
-    end_date: 'End Date:'
-    start_time: 'Start Time:'
-    end_time: 'End Time:'
+    start_date: 'Start Date'
+    end_date: 'End Date'
+    start_time: 'Time:'
+    end_time: 'Time:'
     btn:
       view_sched: 'View Schedule'
       manage_sched: 'Manage Schedule'
