--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -180,10 +180,10 @@ ja:
     recurring: '繰り返し発生します'
     duration: 'デュレーション'
     every: 'すべて：'
-    start_date: '開始日：'
-    end_date: '終了日：'
-    start_time: '始まる時間：'
-    end_time: '終了時間：'
+    start_date: '開始日'
+    end_date: '終了日'
+    start_time: '時間：'
+    end_time: '時間：'
     btn:
       view_sched: '表示スケジュール'
       manage_sched: 'スケジュールを管理します'
