--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,11 +180,15 @@ en:
     modal_title: 'Manage Schedule'
     recurring: 'Recurring'
     duration: 'Duration'
+    recurring-content: 'The dates in which the instance will start/stop depending on the choices below.'
+    duration-content: 'The duration of the instance to run. Depending in the specified start and end date.
+                      Also, the time it will start/stops depends on the time choosen'
     every: 'Every:'
     start_date: 'Start Date'
     end_date: 'End Date'
     start_time: 'Time:'
     end_time: 'Time:'
+
     btn:
       view_sched: 'View Schedule'
       manage_sched: 'Manage Schedule'
