--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -179,9 +179,9 @@ ja:
     modal_title: 'スケジュールを管理'
     recurring: '繰り返し'
     duration: '期間'
-    recurring-content: '日付とは、インスタンスは以下の選択に応じて、スタート/ストップします。'
-    duration-content: 'インスタンスの継続時間は、実行します。指定された開始日と終了日に依存。
-                      また、それが開始された時間は、 /選択された時間に依存して停止します。'
+    recurring-content: 'インスタンスは以下で選択した日付に応じて、スタート/ストップします。'
+    duration-content: '指定された開始日と終了日の間は、インスタンスが起動し続けます。
+                       また、選択された時間によってスタート/ストップします。'
     every: 'すべて:'
     start_date: '開始日'
     end_date: '終了日'
