operation save successfully message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -205,6 +205,8 @@ en:
       friday: 'Friday'
       saturday: 'Saturday'
       sunday: 'Sunday'
+    msg:
+      saved: 'Operation Schedule successfully saved.'
 
   nodes:
     bootstrap:   'Bootstrap'
