detach and terminate ec2 functionalities

--- a/config/locales/en.bootstrap.yml
+++ b/config/locales/en.bootstrap.yml
@@ -13,6 +13,7 @@ en:
       edit: "Edit"
       show: "Show"
       detach: "Detach"
+      terminate: "Terminate"
       close: "Close"
       change: "Change"
       create: "Create"
