--- a/config/locales/ja.bootstrap.yml
+++ b/config/locales/ja.bootstrap.yml
@@ -13,6 +13,7 @@ ja:
       edit: "編集"
       show: "詳細"
       detach: "管理から外す"
+      terminate: "終了します"
       close: "閉じる"
       change: "変更"
       create: "作成"
