created view rules tabpane

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -528,6 +528,9 @@ ja:
       terminate:            'このインスタンスはSkyhopperサービスから削除されます。
                             インスタンスが終了したときにルートEBSボリュームを削除するためにEBS担保インスタンスで、デフォルトのアクションです。
                             任意のローカルドライブ上のストレージが失われます。'
+      security_groups:  'インスタンスに割り当てられるセキュリティグループです。
+                        セキュリティグループは、インスタンスのネットワーク通信を制限するファイアウォールルールのコレクションです。
+                        特定のグループのルールを参照するには、[ルールの表示] をクリックします。'
     btn:
       register:   'インスタンスを登録'
       deregister: 'インスタンスの登録を解除'
