--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -529,6 +529,9 @@ en:
       terminate:            'This instance will be removed from Skyhopper service.
                              On an EBS-backed instance, the default action is for the root EBS volume to be deleted when the instance is terminated.
                              Storage on any local drives will be lost.'
+      security_groups:  'The security groups to which the instance belongs.
+                         A security group is a collection of firewall rules that restrict the network traffic for the instance.
+                         Click View rules to see the rules for the specific group.'
     btn:
       register:   'Register to ELB'
       deregister: 'Deregister from ELB'
