--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -174,6 +174,20 @@ ja:
       loading-list:                'インフラストラクチャのロード中です...'
       invalid_keypair:             'キーペアが無効です! キーペアファイルを確認してください。'
 
+  security_groups:
+      associated:   '%{physical_id} と関連付けられたセキュリティグループ'
+      description:  '説明'
+      group_id:     'グループ ID'
+      inbound:      'インバウンド'
+      outbound:     'アウトバウンド'
+      type:         'タイプ'
+      protocol:     'プロトコル'
+      port_range:   'ポート範囲'
+      source:       '送信先'
+      btn:
+        view_rules:           'ルールの表示'
+        change_groups:        'セキュリティグループの変更'
+
   operation_scheduler:
     title: '運用スケジューラ'
     modal_title: 'スケジュールを管理'
