--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -188,6 +188,9 @@ ja:
       btn:
         view_rules:           'ルールの表示'
         change_groups:        'セキュリティグループの変更'
+        assign:               'セキュリティグループの割り当て'
+      msg:
+        change_success:        'セキュリティの変更グループの成功！'
 
   operation_scheduler:
     title: '運用スケジューラ'
