--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -188,10 +188,14 @@ en:
     source:       'Source'
     destination:  'Destination'
     name:         'Name'
+    list_all:     'List of all Security Groups'
+    denotes:      '* denotes default VPC'
     btn:
       view_rules:           'View Rules'
       change_groups:        'Change Security Groups'
       assign:               'Assign Security Groups'
+      security_groups:      'Security Groups'
+      create:               'Create Security Group'
     msg:
       change_success:        'Change Security Groups Success!'
       error:  'Error!'
