--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -175,6 +175,7 @@ ja:
       invalid_keypair:             'キーペアが無効です! キーペアファイルを確認してください。'
 
   security_groups:
+      title:        'セキュリティグループ'
       associated:   'と関連付けられたセキュリティグループ'
       description:  '説明'
       group_id:     'グループ ID'
