I18n for registration form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -458,6 +458,7 @@ en:
     mfa_secret:        'Secret key of MFA'
     search:            'Search by email'
     create_new_user:   'Create New User'
+    create_admin_user: 'Create Administrator User'
     btn:
       add: 'Add User'
       sync: 'Synchronize with Zabbix Server'
