--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -459,6 +459,7 @@ en:
     search:            'Search by email'
     create_new_user:   'Create New User'
     create_admin_user: 'Create Administrator User'
+    remember_me:       'Remember me'
     btn:
       add: 'Add User'
       sync: 'Synchronize with Zabbix Server'
