--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -456,6 +456,7 @@ ja:
     search:            'メールアドレスで検索'
     create_new_user:   '新規ユーザーの作成'
     create_admin_user: '管理者ユーザーの作成'
+    remember_me:       'ログイン状態を保持する'
     btn:
       add: '新規ユーザー'
       sync: 'Zabbix Server と同期'
