--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,8 @@ en:
       cant_delete_system: 'Unable to delete project for this system.'
       empty-list:         'No Project found.'
 
+  project_parameters:
+    title: 'Parameter'
 
   infrastructures:
     infrastructure:     'Infrastructure'
