--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -125,6 +125,9 @@ ja:
       cant_delete_system: 'システム用のプロジェクトは削除できません'
       empty-list:         'プロジェクトは空です。'
 
+  project_parameters:
+    title: 'パラーメター'
+
   infrastructures:
     infrastructure:     'インフラストラクチャ'
     genre:              '種別'
