--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,11 +127,11 @@ en:
 
   project_parameters:
     title: 'Parameter'
-    description_html: 'You can edit parameters for each project.<br />
-                  In CloudFormation and Cook, you can use edited parameters.'
+    description_html: 'You can set/edit the parameters for each project.<br />
+                  Furthermore, you can use the given parameters in CloudFormation and Cook.'
     btn:
       remove:   'Remove'
-      unremove: 'UnRemove'
+      unremove: 'Undo'
     msg:
       updated: 'Parameters was successfully updated.'
     label:
