--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,6 +97,7 @@ en:
     client: 'Client'
     code:   'Code'
     name:   'Name'
+    projects: 'No. of projects'
     btn:
       show_projects: 'Show'
       add:           'New Client'
