--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -97,6 +97,7 @@ ja:
     client: '顧客'
     code:   '顧客コード'
     name:   '顧客名'
+    projects: 'プロジェクトの第'
     btn:
       show_projects: '案件一覧'
       add:           '新規顧客'
