--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,7 +97,7 @@ en:
     client: 'Client'
     code:   'Code'
     name:   'Name'
-    projects: 'No. of projects'
+    projects: 'Projects'
     btn:
       show_projects: 'Show'
       add:           'New Client'
@@ -116,7 +116,7 @@ en:
     access_key:        'Access Key ID'
     secret_access_key: 'Secret Access Key'
     cloud_provider:    'Cloud Provider'
-    infras:            'No. of Infrastructures'
+    infras:            'Infras'
     btn:
       show_infrastructures: 'Show'
       add:                  'New Project'
