Implement save_retention_policy

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -627,12 +627,14 @@ en:
     delete_snapshot:   'Delete Snapshot'
     schedule_snapshot: 'Schedule Snapshot Creation'
     list_of_snapshots: 'List of Snapshots'
+    retention_policy:  'Retention Policy'
     msg:
       no_snapshots:    'You do not have any snapshots for this volume'
       create_snapshot: 'Are you sure you want to create snapshot of %{volume_id} ?'
       delete_snapshot: 'Are you sure you want to delete following snapshots?'
       creation_started: 'Snapshot creation has started.'
       snapshot_is_protected: 'Cannot delete %{snapshot_id} because it is protected.'
+      policy_saved:    'Retantion policy has been saved successfully.'
 
   datepicker:
     today: 'Go to Today'
