--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -626,12 +626,14 @@ ja:
     delete_snapshot:   'スナップショットの削除'
     schedule_snapshot: '作成スケジュールの変更'
     list_of_snapshots: 'スナップショットの一覧'
+    retention_policy:  'リテンションポリシー'
     msg:
       no_snapshots:    'このボリュームのスナップショットはありません'
       create_snapshot: '%{volume_id} のスナップショットを作成しますか?'
       delete_snapshot: '以下のスナップショットを削除しますか?'
       creation_started: 'スナップショットの作成が開始されました'
       snapshot_is_protected: '%{snapshot_id} は保護されているため削除できません'
+      policy_saved:    'リテンションポリシーが保存されました'
 
   datepicker:
     today: '今日'
