--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -628,6 +628,7 @@ en:
     schedule_snapshot: 'Schedule Snapshot Creation'
     list_of_snapshots: 'List of Snapshots'
     retention_policy:  'Retention Policy'
+    snapshots_to_keep: 'Snapshots to keep'
     msg:
       no_snapshots:    'You do not have any snapshots for this volume'
       create_snapshot: 'Are you sure you want to create snapshot of %{volume_id} ?'
