--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -627,6 +627,7 @@ ja:
     schedule_snapshot: '作成スケジュールの変更'
     list_of_snapshots: 'スナップショットの一覧'
     retention_policy:  'リテンションポリシー'
+    snapshots_to_keep: '保持する最新のスナップショット数'
     msg:
       no_snapshots:    'このボリュームのスナップショットはありません'
       create_snapshot: '%{volume_id} のスナップショットを作成しますか?'
